# hololive-python-api

./: README.md  setup.cfg  test.py
.github/workflows/: codeql-analysis.yml  python-publish.yml
src/hololive/: hololive.py
