[metadata]
name = hololive
version = 0.0.5
author = Marnixah
author_email = hololive@marnixah.com
description = Gets hololive streams
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marnixah/hololive-python-api
project_urls =
    Bug Tracker = https://github.com/marnixah/hololive-python-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    cutlet
    requests
[options.packages.find]
where = src